force-app/main/default/objects/UI_Job_Status__c/fields/InputJSON__c.field-meta.xml
<CustomField>
    <fullName>InputJSON__c</fullName>
    <label>InputJSON</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>