force-app/main/default/objects/UI_Job_Status__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>Job Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>