force-app/main/default/objects/UI_Job_Status__c/fields/Task_Configuration_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Configuration_Id__c</fullName>
    <label>Task Configuration Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>